--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/flag-icons/css/flag-icons.min.css"
             ],
             "scripts": []
           },
