--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
               "src/assets/svg"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
+              "src/theme.scss",
               "node_modules/flag-icons/css/flag-icons.min.css"
             ],
             "scripts": []
